# hyperware-openai-ttstt

./: Cargo.toml  README.md
hyperware-openai-stt/: Cargo.toml
hyperware-openai-stt/src/: client.rs  error.rs  lib.rs  multipart.rs  tests.rs  types.rs
hyperware-openai-tts/: Cargo.toml
hyperware-openai-tts/src/: client.rs  error.rs  lib.rs  tests.rs  types.rs
implementation-docs/: IMPLEMENTATION_PLAN.md  instructions.md
