[package]
name = "hyperware-openai-tts"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", rev = "0e1aacc", features = ["hyperapp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.0"
url = "2.5"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
