[package]
name = "hyperware-openai-tts"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.0"
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", features = ["hyperapp"], rev = "2453cc6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
